improv. fix issue

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  console_build:
 
     runs-on: ubuntu-latest
 
@@ -20,6 +20,22 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build ConsoleApplication --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test ConsoleApplication --no-build --verbosity normal
+  application_build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build DesktopApplication --no-restore
+    - name: Test
+      run: dotnet test DesktopApplication --no-build --verbosity normal
