--- a/DesktopApplication/DesktopApplication.csproj
+++ b/DesktopApplication/DesktopApplication.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <RuntimeIdentifiers>win10-x64;linux-x64</RuntimeIdentifiers>
     </PropertyGroup>
 
 </Project>
