--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -84,4 +84,4 @@ jobs:
         Configuration: ${{ matrix.configuration }}
         
     - name: Publish
-      run: dotnet publish
+      run: dotnet publish -r win-x64 -p:PublishSingleFile=true --self-contained true
