--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -85,3 +85,11 @@ jobs:
         
     - name: Publish
       run: dotnet publish -r win-x64 -p:PublishSingleFile=true --self-contained true
+        # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
+        
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v2
+      with: 
+        name: MSIX Package
+        path : D:\a\CESI-DotNet\CESI-DotNet\DesktopApplication\bin\Debug\net6.0-windows\win-x64\publish\
+      
