--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -72,24 +72,13 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-
-    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
-
-    # Restore the application to populate the obj folder with RuntimeIdentifiers
-    - name: Restore the application
-      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
-      env:
-        Configuration: ${{ matrix.configuration }}
         
     - name: Publish
       run: dotnet publish -r win-x64 -p:PublishSingleFile=true --self-contained true
-        # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
         
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with: 
-        name: MSIX Package
-        path : D:\a\CESI-DotNet\CESI-DotNet\DesktopApplication\bin\Debug\net6.0-windows\win-x64\publish\
+        name: DesktopApplication
+        path : D:\a\CESI-DotNet\CESI-DotNet\DesktopApplication\bin\Debug\net6.0-windows\win-x64\publish\DesktopApplication.exe
       
