--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -34,6 +34,6 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with: 
-        name: DesktopApplication
-        path : D:\a\CESI-DotNet\CESI-DotNet\DesktopApplication\bin\Debug\net6.0-windows\win-x64\publish\DesktopApplication.exe
+        name: DesktopApplication-win-x64-b${{ github.run_number }}
+        path : D:\a\CESI-DotNet\CESI-DotNet\DesktopApplication\bin\Debug\net6.0-windows\win-x64\publish\
       
