--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,6 +28,9 @@ jobs:
       with:
         dotnet-version: 6.0.x
         
+    - name: Restore
+      run: dotnet restore DesktopApplication
+        
     - name: Publish
       run: dotnet publish DesktopApplication -r win-x64 -p:PublishSingleFile=true --configuration Release --self-contained true --no-restore
         
