--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -6,6 +6,11 @@ on:
     paths:
     - 'DesktopApplication/**'
     - 'MainApplication/**'
+  pull_request:
+    branches: [ master ]
+    paths:
+    - 'DesktopApplication/**'
+    - 'MainApplication/**'
 
 jobs:
 
