--- a/GuiApplication/GuiApplication.csproj
+++ b/GuiApplication/GuiApplication.csproj
@@ -15,7 +15,7 @@
 	<ItemGroup>
 		<None Remove="Views\Dialogs\CreateSaveDialog.xaml" />
 		<None Remove="Views\Pages\HomePage.xaml" />
-		<None Remove="Views\Pages\SavesPages.xaml" />
+		<None Remove="Views\Pages\SavesPage.xaml" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -27,12 +27,16 @@
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
 		<ProjectCapability Include="Msix" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\MainApplication\MainApplication.csproj" />
+	</ItemGroup>
 	<ItemGroup>
 		<Page Update="Views\Dialogs\CreateSaveDialog.xaml">
 			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 			<SubType>Designer</SubType>
 		</Page>
-		<Page Update="Views\Pages\SavesPages.xaml">
+		<Page Update="Views\Pages\SavesPage.xaml">
 			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 			<SubType>Designer</SubType>
 		</Page>
