--- a/MainApplication/MainApplication.csproj
+++ b/MainApplication/MainApplication.csproj
@@ -12,25 +12,20 @@
 
     <ItemGroup>
       <EmbeddedResource Update="Localization\Language.fr-FR.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>fr_FR.Designer.cs</LastGenOutput>
       </EmbeddedResource>
       <EmbeddedResource Update="Localization\Language.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
-        <LastGenOutput>Langage.Designer.cs</LastGenOutput>
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Language.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Localization\Language.fr-FR.Designer.cs">
-        <DesignTime>True</DesignTime>
-        <AutoGen>True</AutoGen>
-        <DependentUpon>fr_FR.resx</DependentUpon>
-      </Compile>
       <Compile Update="Localization\Language.Designer.cs">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
-        <DependentUpon>Langage.resx</DependentUpon>
+        <DependentUpon>Language.resx</DependentUpon>
       </Compile>
     </ItemGroup>
 
