--- a/CryptoSoft/CryptoSoft.csproj
+++ b/CryptoSoft/CryptoSoft.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Remove="Program.cs" />
+    </ItemGroup>
+
 </Project>
