--- a/.github/workflows/dotnet-gui.yml
+++ b/.github/workflows/dotnet-gui.yml
@@ -19,9 +19,11 @@ jobs:
     strategy:
       matrix:
         configuration: [Release]
+        platform: [x64, x86]
 
     runs-on: windows-2022
-      
+    env:
+      Solution_Name: GuiApplication
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -34,15 +36,38 @@ jobs:
       with:
         dotnet-version: 6.0.x
         
-    - name: Restore
-      run: dotnet restore GuiApplication
+    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1.0.2
+
+    # Restore the application to populate the obj folder with RuntimeIdentifiers
+    - name: Restore the application
+      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
+      
+    # Decode the base 64 encoded pfx and save the Signing_Certificate
+    - name: Decode the pfx
+      run: |
+        $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.BASE64_ENCODED_PFX }}")
+        $certificatePath = "GitHubActionsWorkflow.pfx"
+        [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
         
-    - name: Publish
-      run: dotnet publish GuiApplication -r win10-x64 -p:PublishSingleFile=true --configuration Release --self-contained true --no-restore
-        
-    - name: Upload build artifacts
+    - name: Create the app package
+      run: msbuild $env:Solution_Name /p:Configuration=$env:Configuration /p:Platform=$env:Platform /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:AppxPackageDir="$env:Appx_Package_Dir" /p:GenerateAppxPackageOnBuild=true
+      env:
+        Appx_Bundle: Never
+        Appx_Package_Build_Mode: SideloadOnly
+        Appx_Package_Dir: Packages\
+        Configuration: ${{ matrix.configuration }}
+        Platform: ${{ matrix.platform }}
+    # Remove the pfx
+    - name: Remove the pfx
+      run: Remove-Item -path GitHubActionsWorkflow.pfx
+      
+    - name: Upload MSIX package
       uses: actions/upload-artifact@v2
       with: 
-        name: GuiApplication-win10-x64-b${{ github.run_number }}
-        path : ${{ github.workspace }}\GuiApplication\bin\Release\net6.0-windows\win10-x64\publish\
+        name: MSIX Package
+        path : ${{ env.Solution_Name }}\\Packages
       
