--- a/MainApplication/MainApplication.csproj
+++ b/MainApplication/MainApplication.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="NetCoreServer" Version="6.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
         <EmbeddedResource Update="Localization\Language.fr-FR.resx">
             <Generator>PublicResXFileCodeGenerator</Generator>
             <LastGenOutput>fr_FR.Designer.cs</LastGenOutput>
